# jupyterlab-hdf5

./: .bumpversion.cfg  .eslintrc.js  .gitignore  .lintstagedrc.js  .pre-commit-config.yaml  .pre-config-commit.yaml  .prettierignore  LICENSE  MANIFEST.in  README.md  index.html  package.json  release.py  release.sh  setup.cfg  setup.py  setupbase.py  tsconfig.eslint.json  tsconfig.json  tsconfigbase.json
.github/workflows/: build.yml  python.yml
binder/: environment.yml  postBuild  requirements.txt
docs/internal/black_with_precommit/: README.md
example/: cutnpaste.ipynb  nested.hdf5  nested_data_ext.hdf5  nested_int.hdf5  nested_int_data_ext.hdf5  non_simple_entities.h5  snippet.ipynb
jupyter-config/jupyter_notebook_config.d/: jupyterlab_hdf.json  jupyterlab_hdf5.json
jupyterlab_hdf/: __init__.py  _version.py  attrs.py  baseHandler.py  classes.py  config.py  contents.py  data.py  dataset.py  exception.py  meta.py  metadata.py  responses.py  snippet.py  temp_utils.py  util.py
jupyterlab_hdf/api/: api.yaml
jupyterlab_hdf/tests/: test_attrs.py  test_contents.py  test_data.py  test_meta.py  test_meta_links.py  utils.py
jupyterlab_hdf5/: __init__.py  config.py  metadata.py
jupyterlab_hdf5/api/: api.yaml
scratch/: dataset.ai  genNested.py  nested-contents.ipynb  nested-dataset.ipynb  nested-meta.ipynb  nested.ipynb
src/: AttributeViewer.tsx  browser.ts  complex.ts  contents.ts  dataregistry.ts  dataset.ts  exception.tsx  hdf.ts  hdf5.ts  index.ts  meta.ts  slice.ts  toolbar.tsx  utils.ts
style/: AttributeViewer.css  index.css
