[bdist_wheel]
universal=1

[flake8]
# ref: https://flake8.pycqa.org/en/2.5.5/warnings.html#error-codes
# E302: "expected 2 blank lines, found 0"
extend-ignore=E301,E302,E305
max-line-length=120

[metadata]
description_file = README.md
license_file = LICENSE

# config for autopep8
[pycodestyle]
# autopep8 doesn't seem to know about extend-ignore
ignore=E301,E302,E305
max-line-length=120

[tool:pytest]
junit_family=xunit2
